<resources>
    <string name="app_name">CalculatorApp</string>
    <string name="default_value">0</string>
    <string name="button_label_clear">C</string>
    <string name="button_label_delete">Del</string>
    <string name="button_label_one">1</string>
    <string name="button_label_two">2</string>
    <string name="button_label_three">3</string>
    <string name="button_label_four">4</string>
    <string name="button_label_five">5</string>
    <string name="button_label_six">6</string>
    <string name="button_label_seven">7</string>
    <string name="button_label_eight">8</string>
    <string name="button_label_nine">9</string>
    <string name="button_label_zero">0</string>
    <string name="button_label_plus">+</string>
    <string name="button_label_minus">-</string>
    <string name="button_label_division">/</string>
    <string name="button_label_multiplication">*</string>
    <string name="button_label_equality">=</string>
    <string name="button_label_decimal">.</string>
</resources>