<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="*">


    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <EditText
            android:id="@+id/show_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_span="4"
            android:gravity="end"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            tools:ignore="LabelFor" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/button_clear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_span="2"
            android:text="@string/button_label_clear"
            style="@style/Buttons.Danger" />

        <Button
            android:id="@+id/button_delete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_span="2"
            android:text="@string/button_label_delete"
            style="@style/Buttons.Danger"
            />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/button_seven"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:text="@string/button_label_seven"
            />

        <Button
            android:id="@+id/button_eight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:text="@string/button_label_eight"
            />

        <Button
            android:id="@+id/button_nine"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:text="@string/button_label_nine"
            />

        <Button
            android:id="@+id/button_plus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:text="@string/button_label_plus"
            style="@style/Buttons.Operator"
            />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/button_four"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:text="@string/button_label_four"
            />

        <Button
            android:id="@+id/button_five"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:text="@string/button_label_five"
            />

        <Button
            android:id="@+id/button_six"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:text="@string/button_label_six"
            />

        <Button
            android:id="@+id/button_minus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:text="@string/button_label_minus"
            style="@style/Buttons.Operator"
            />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/button_one"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:text="@string/button_label_one"
            />

        <Button
            android:id="@+id/button_two"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:text="@string/button_label_two"
            />

        <Button
            android:id="@+id/button_three"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:text="@string/button_label_three"
            />

        <Button
            android:id="@+id/button_multiplication"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:text="@string/button_label_multiplication"
            style="@style/Buttons.Operator"
            />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/button_zero"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:text="@string/button_label_zero"
            style="@style/Buttons.Operator"
            />

        <Button
            android:id="@+id/button_decimal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:text="@string/button_label_decimal"
            style="@style/Buttons.Operator"
            />

        <Button
            android:id="@+id/button_equality"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:text="@string/button_label_equality"
            style="@style/Buttons.Operator"
            />

        <Button
            android:id="@+id/button_division"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:text="@string/button_label_division"
            style="@style/Buttons.Operator"
            />
    </TableRow>
</TableLayout>


